--- a/.gitignore
+++ b/.gitignore
@@ -446,7 +446,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -469,4 +469,5 @@ Temporary Items
 
 # ---> Ansible
 *.retry
+.ansible
 
